# legged-rl-isaaclab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: list_envs.py  (+2 more)
source/legged_obstacle_rl/: pyproject.toml  setup.py
source/legged_obstacle_rl/config/: extension.toml
source/legged_obstacle_rl/docs/: CHANGELOG.rst
source/legged_obstacle_rl/legged_obstacle_rl/: __init__.py  teleop.py
source/legged_obstacle_rl/legged_obstacle_rl/assets/: icra_map_flat.usd
source/legged_obstacle_rl/legged_obstacle_rl/tasks/: __init__.py
source/legged_obstacle_rl/legged_obstacle_rl/tasks/manager_based/legged_obstacle_rl/: __init__.py  unitree_go1_rl_env_cfg.py
source/legged_obstacle_rl/legged_obstacle_rl/tasks/manager_based/legged_obstacle_rl/agents/: skrl_ppo_cfg.yaml
source/legged_obstacle_rl/legged_obstacle_rl/tasks/manager_based/locomotion/: __init__.py  locomotion_env_cfg.py
source/legged_obstacle_rl/legged_obstacle_rl/tasks/manager_based/mdp/: __init__.py  rewards.py
source/legged_obstacle_rl/legged_obstacle_rl/tasks/sim2sim/: teleop.py
source/legged_obstacle_rl/legged_obstacle_rl/tasks/sim2sim/mujoco/: __init__.py  go1_argo_env.py  go1_rough_env.py  utils.py
source/legged_obstacle_rl/legged_obstacle_rl/terrains/: __init__.py
source/legged_obstacle_rl/legged_obstacle_rl/terrains/config/: rough.py
source/legged_obstacle_rl/legged_obstacle_rl/terrains/height_field/: __init.py  hf_terrains.py  hf_terrains_cfg.py
source/legged_obstacle_rl/legged_obstacle_rl/terrains/trimesh/: __init__.py  mesh_terrains.py  mesh_terrains_cfg.py
(+35 files in other folders)
